src/scss/_main.scss
main {
    grid-area: main;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    box-sizing: border-box;
    overflow: scroll;

    article {
        order: 1;
        display: block;
        margin: 2rem;
        max-width: 65%;

        img {
            width: 100%;
            height: auto;
        }
    }

    .toc {
        order: 2;
        font-size: 0.8rem;
        width: max-content;
        position: sticky;
        align-self: flex-start;
        padding: 1rem;

        ul {
            list-style: none;
            padding: 0;
            margin: 0;

            ul {
                margin-left: 0.25rem;
                margin-top: 0.25rem;
                margin-bottom: 0.25rem;
                border-left: 2px solid var(--border-color);
                padding-left: 0.5rem;
            }

            li {
                margin-top: 0.25rem;
                margin-bottom: 0.25rem;
                position: relative;
            }

            li:last-child {
                margin-bottom: 0;
            }
        }

        a {
            color: var(--accent-color);
            text-decoration: none;
        }

        a:hover, a:focus {
            text-decoration: underline;
        }
    }

    @media (max-width: 1024px) {
        article {
            max-width: 100%;
            margin: 1rem;
        }
        .toc {
            display: none;
        }
    }

    @media (max-width: 768px) {
        flex-direction: column;
        justify-content: start;
    }
}

